Changed phone number to reflect business number

--- a/public/contact.html
+++ b/public/contact.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="brand">McSmash Designs</div>
-    <div class="address-bar">600 Navarro St #350 | San Antonio, TX 78205 | 702.217.9029</div>
+    <div class="address-bar">600 Navarro St #350 | San Antonio, TX 78205 | (210) 802-7397</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-md-4">
                     <p>Phone:
-                        <strong>702.217.9029</strong>
+                        <strong>(210) 802-7397</strong>
                     </p>
                     <p>Email:
                         <strong><a href="mailto:ashley.callahan1091@gmail.com">ashley.callahan1091@gmail.com</a></strong>
