--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 <body>
 
 	<div class="brand">McSmash Designs</div>
-	<div class="address-bar">600 Navarro St #350 | San Antonio, TX 78205 | 702.217.9029</div>
+	<div class="address-bar">600 Navarro St #350 | San Antonio, TX 78205 | (210) 802-7397</div>
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-default" role="navigation">
