Added first blog post and styling

--- a/public/blog.html
+++ b/public/blog.html
@@ -85,12 +85,15 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/blog-one_Fotor.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Why Coding?
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>June 29.2016</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                    <p>Why coding? It’s a popular question among people when they ask what I go to school for. Why software development? The short answer? Why not?</p>
+
+                    <p>But that wouldn’t be entirely fair to just leave it at that. I’ll throw you a bone or two.</p>
+
+                    <a href="blogpost-one.html" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
