--- a/public/blog.html
+++ b/public/blog.html
@@ -93,7 +93,7 @@
 
                     <p>But that wouldn’t be entirely fair to just leave it at that. I’ll throw you a bone or two.</p>
 
-                    <a href="blogpost-one.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="why-coding.html" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
