added calculator link and removed unnecessary images from directories

--- a/public/index.html
+++ b/public/index.html
@@ -160,13 +160,19 @@
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Simon Says</h3>
 								<a href="steve-says/steve-says.html">
-									<img class="img-responsive img-border img-left" src="img/steve-says.png" alt="" id="stevesays">
+									<img class="img-responsive img-border img-center" src="img/steve-says.png" alt="" id="stevesays">
 								</a>
 							</div>
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Weather Map</h3>
 								<a href="weather-map/weather_map.html">
-									<img class="img-responsive img-border img-left" src="img/weather-map.png" alt="" id="weather-map">
+									<img class="img-responsive img-border img-center" src="img/weather-map.png" alt="" id="weather-map">
+								</a>
+							</div>
+							<div class="col-sm-4">
+							<h3 class="intro-text text-center">Calculator</h3>
+								<a href="calculator/calculator-practice.html">
+									<img class="img-responsive img-border img-center" src="img/calculator_Fotor.png" alt="" id="calculator">
 								</a>
 							</div>
 						</div>
@@ -187,7 +193,7 @@
 						<div class="container">
 							<div class="row">
 							
-							<div class="col-md-12">
+							<div class="col-md-12 img-center">
 								
 								<a href="https://www.facebook.com/ashley.callahan1091" target="_blank" class="btn-social btn-facebook"><i class="fa fa-facebook"></i></a>
 								<a href="https://github.com/AshleyCallahan1091" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
