renamed calculator file

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
 							</div>
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Calculator</h3>
-								<a href="/calculator/calculator-practice.html">
+								<a href="/calculator/calculator.html">
 									<img class="img-responsive img-border img-center" src="img/calculator_Fotor.png" alt="" id="calculator">
 								</a>
 							</div>
