--- a/public/why-coding.html
+++ b/public/why-coding.html
@@ -103,5 +103,18 @@
 					<p style="font-family: 'Gloria Hallelujah', cursive; font-size: 30px;"> -Ashley</p>
 		   
 			   <a href="blog.html" class="btn btn-default btn-lg">Back</a>
+
+			   <!-- jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap/bootstrap.min.js"></script>
+
+	<!-- Script to Activate the Carousel -->
+	<script>
+	$('.carousel').carousel({
+		interval: 5000 //changes the speed
+	})
+	</script>
 	</body>
 </html>
