updated resume info to be more readable

--- a/public/about.html
+++ b/public/about.html
@@ -111,15 +111,24 @@
 						<small>Staff (November 2015 - May 2016)</small>
 							<p></p>
 							<ul class="resume">
-								<li class="resume-stuff">Opened and closed the store;</li>
-								<li class="resume-stuff">Restocked items as they ran low;</li>
-								<li class="resume-stuff">Greeted customers as they arrived;</li>
-								<li class="resume-stuff">Offered samples to customers;</li>
-								<li class="resume-stuff">Cleaned and maintained the lobby, kitchen and restrooms throughout the shift;</li>
-								<li class="resume-stuff">Cashed customers out at the register when they were ready to checkout;</li>
-								<li class="resume-stuff">Answered phones as necessary;</li>
-								<li class="resume-stuff">Hosted birthday parties;</li>
-								<li class="resume-stuff">Illustrated the chalkboard for various events and functions;</li>
+								<li style="text-align: left;
+    ;">Opened and closed the store;</li>
+								<li style="text-align: left;
+    ;">Restocked items as they ran low;</li>
+								<li style="text-align: left;
+    ;">Greeted customers as they arrived;</li>
+								<li style="text-align: left;
+    ;">Offered samples to customers;</li>
+								<li style="text-align: left;
+    ;">Cleaned and maintained the lobby, kitchen and restrooms throughout the shift;</li>
+								<li style="text-align: left;
+    ;">Cashed customers out at the register when they were ready to checkout;</li>
+								<li style="text-align: left;
+    ;">Answered phones as necessary;</li>
+								<li style="text-align: left;
+    ;">Hosted birthday parties;</li>
+								<li style="text-align: left;
+    ;">Illustrated the chalkboard for various events and functions;</li>
 							</ul>
 					</h4>
 				</div>
@@ -130,13 +139,20 @@
 						<small>Legal Assistant (April 2013 - December 2014)</small>
 						<p></p>
 							<ul class="resume">
-								<li class="resume-stuff">Retrieved and entered data from documents;</li>
-								<li class="resume-stuff">Shredded documents as necessary;</li>
-								<li class="resume-stuff">Generated certificates for company-sponsored webinars;</li>
-								<li class="resume-stuff">Maintained a company website, including proofreading and updating information to reflect new changes and additions;</li>
-								<li class="resume-stuff">Scanned documents to preserve for company records;</li>
-								<li class="resume-stuff">Edited documents for webinar presentations;</li>
-								<li class="resume-stuff">Answered phones as necessary;</li>
+								<li style="text-align: left;
+    ">Retrieved and entered data from documents;</li>
+								<li style="text-align: left;
+    ">Shredded documents as necessary;</li>
+								<li style="text-align: left;
+    ">Generated certificates for company-sponsored webinars;</li>
+								<li style="text-align: left;
+    ">Maintained a company website, including proofreading and updating information to reflect new changes and additions;</li>
+								<li style="text-align: left;
+    ">Scanned documents to preserve for company records;</li>
+								<li style="text-align: left;
+    ">Edited documents for webinar presentations;</li>
+								<li style="text-align: left;
+    ">Answered phones as necessary;</li>
 							</ul>
 					</h4>
 				</div>
@@ -147,13 +163,20 @@
 						<small>Legal Assistant (July 2011 - March 2013)</small>
 						<p></p>
 							<ul class="resume">
-								<li class="resume-stuff">Retrieved and entered data from documents;</li>
-								<li class="resume-stuff">Shredded documents as necessary;</li>
-								<li class="resume-stuff">Generated certificates for company-sponsored webinars;</li>
-								<li class="resume-stuff">Maintained a company website, including proofreading and updating information to reflect new changes and additions;</li>
-								<li class="resume-stuff">Scanned documents to preserve for company records;</li>
-								<li class="resume-stuff">Edited documents for webinar presentations;</li>
-								<li class="resume-stuff">Answered phones as necessary;</li>
+								<li style="text-align: left;
+    ">Retrieved and entered data from documents;</li>
+								<li style="text-align: left;
+    ">Shredded documents as necessary;</li>
+								<li style="text-align: left;
+    ">Generated certificates for company-sponsored webinars;</li>
+								<li style="text-align: left;
+    ">Maintained a company website, including proofreading and updating information to reflect new changes and additions;</li>
+								<li style="text-align: left;
+    ">Scanned documents to preserve for company records;</li>
+								<li style="text-align: left;
+    ">Edited documents for webinar presentations;</li>
+								<li style="text-align: left;
+    ">Answered phones as necessary;</li>
 							</ul>
 					</h4>
 				</div>
