added social media links

--- a/public/index.html
+++ b/public/index.html
@@ -199,12 +199,24 @@
 								<a href="https://github.com/AshleyCallahan1091" target="_blank" class="btn-social btn-github"><i class="fa fa-github-alt"></i></a>
 								<a href="https://plus.google.com/u/0/109755591059967793592" target="_blank" class="btn-social btn-google-plus"><i class="fa fa-google-plus"></i></a>
 								<a href="https://www.instagram.com/mcsmashdesigns/" target="_blank" class="btn-social btn-instagram"><i class="fa fa-instagram"></i></a>
-								<a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-linkedin"><i class="fa fa-linkedin"></i></a>
-								<a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-pinterest"><i class="fa fa-pinterest"></i></a>
-								<a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-skype"><i class="fa fa-skype"></i></a>
+								<a href="http://www.linkedin.com/in/ashleymariecallahan" target="_blank" class="btn-social btn-linkedin"><i class="fa fa-linkedin"></i></a>
+								<a href="https://www.pinterest.com/mcsmashdesigns/" target="_blank" class="btn-social btn-pinterest"><i class="fa fa-pinterest"></i></a>
+								
 								<a href="https://trello.com/ashleycallahan4" target="_blank" class="btn-social btn-trello"><i class="fa fa-trello"></i></a>
-								<a href="http://scripteden.com/download/eden-ui/" target="_blank" class="btn-social btn-tumblr"><i class="fa fa-tumblr"></i></a>
+								<a href="http://mcsmashdesigns.tumblr.com" target="_blank" class="btn-social btn-tumblr"><i class="fa fa-tumblr"></i></a>
 								<a href="https://twitter.com/AshleySmash1091" target="_blank" class="btn-social btn-twitter"><i class="fa fa-twitter"></i></a>
+								<script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
+<div id="SkypeButton_Call_mcsmashdesigns_1">
+ <script type="text/javascript">
+ Skype.ui({
+ "name": "call",
+ "element": "SkypeButton_Call_mcsmashdesigns_1",
+ "participants": ["mcsmashdesigns"],
+ "imageSize": 32
+ });
+ </script>
+</div>
+
 							</div>
 						</div>
 						</div>
@@ -237,6 +249,9 @@
 		interval: 5000 //changes the speed
 	})
 	</script>
+
+
+
 
 </body>
 
