--- a/public/calculator/calculator.html
+++ b/public/calculator/calculator.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Calculator</title>
 		<link href="https://fonts.googleapis.com/css?family=Atma" rel="stylesheet">
-		<link rel="stylesheet" href="css/calculator-practice.css">
+		<link rel="stylesheet" href="calculator.css">
 
 	</head>
 	<body>
@@ -48,7 +48,7 @@
 		</div>
 	</div>
 
-	<script src="js/calculator-practice.js"></script>
+	<script src="calculator.js"></script>
 
 	</body>
 </html>
