changed email address and finally somewhat fixed decimal point - still adds more than one. you should fix that

--- a/public/contact.html
+++ b/public/contact.html
@@ -93,7 +93,7 @@
                         <strong>(210) 802-7397</strong>
                     </p>
                     <p>Email:
-                        <strong><a href="mailto:ashley.callahan1091@gmail.com">ashley.callahan1091@gmail.com</a></strong>
+                        <strong><a href="mailto:mcsmashdesigns@gmail.com">mcsmashdesigns@gmail.com</a></strong>
                     </p>
                     <p>Address:
                         <strong>600 Navarro St #350  
