fixed css for calculator and added html code to open portfolio links in separate tab

--- a/public/index.html
+++ b/public/index.html
@@ -159,19 +159,19 @@
 							
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Simon Says</h3>
-								<a href="steve-says/steve-says.html">
+								<a href="steve-says/steve-says.html" target="_blank">
 									<img class="img-responsive img-border img-center" src="img/steve-says.png" alt="" id="stevesays">
 								</a>
 							</div>
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Weather Map</h3>
-								<a href="weather-map/weather_map.html">
+								<a href="weather-map/weather_map.html" target="_blank">
 									<img class="img-responsive img-border img-center" src="img/weather-map.png" alt="" id="weather-map">
 								</a>
 							</div>
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Calculator</h3>
-								<a href="calculator/calculator.html">
+								<a href="calculator/calculator.html" target="_blank">
 									<img class="img-responsive img-border img-center" src="img/calculator_Fotor.png" alt="" id="calculator">
 								</a>
 							</div>
