--- a/public/steve-says/steve-says.html
+++ b/public/steve-says/steve-says.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	<title>(Not so simple) Simon Says!</title>
+	
 	<link rel="stylesheet" href="steve-says.css">
 	<link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
 	</head>
@@ -27,11 +28,12 @@
 			</div>
 		</div>
 
-		<div id=scoreContainer>
+		<div id="scoreContainer">
 			<label>Your score is:</label>
 			<input type="text" id="score" placeholder="0" disabled>
 		</div>
-
+		
+		
 		<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="steve-says.js"></script>
 	</body>
