fixed picture margins and updated calculator image to show css changes

--- a/public/index.html
+++ b/public/index.html
@@ -154,13 +154,13 @@
 						<strong>Portfolio:</strong>
 					</h2>
 					<hr>
-						<div class="container">
+						<div class="container  imagesmargin"">
 							<div class="row">
 							
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Simon Says</h3>
 								<a href="steve-says/steve-says.html" target="_blank">
-									<img class="img-responsive img-border img-center" src="img/steve-says.png" alt="" id="stevesays">
+									<img class="img-responsive img-border img-center imagesize" src="img/simonsays.png" alt="" id="stevesays">
 								</a>
 							</div>
 							<div class="col-sm-4">
@@ -172,7 +172,7 @@
 							<div class="col-sm-4">
 							<h3 class="intro-text text-center">Calculator</h3>
 								<a href="calculator/calculator.html" target="_blank">
-									<img class="img-responsive img-border img-center" src="img/calculator_Fotor.png" alt="" id="calculator">
+									<img class="img-responsive img-border img-center imagesize" src="img/calculator.png" alt="" id="calculator">
 								</a>
 							</div>
 						</div>
@@ -190,7 +190,7 @@
 						<strong>social media:</strong>
 					</h2>
 					<hr>
-						<div class="container">
+						<div class="container imagesmargin">
 							<div class="row">
 							
 							<div class="col-md-12 img-center">
