--- a/public/why-coding.html
+++ b/public/why-coding.html
@@ -16,6 +16,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+
+	<!--Share button scripts-->
+	<script type="text/javascript">var switchTo5x=true;</script>
+	<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+	<script type="text/javascript">stLight.options({publisher: "63a83be7-2bfa-47c1-8042-f8403cc1d615", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 	</head>
 	<body>
 		<div class="brand">McSmash Designs</div>
@@ -74,6 +79,16 @@
 						<br>
 						<small>June 29.2016</small>
 					</h2><br><br>
+					<div class="img-center">
+						<span class='st_sharethis_large' displayText='ShareThis'></span>
+						<span class='st_facebook_large' displayText='Facebook'></span>
+						<span class='st_twitter_large' displayText='Tweet'></span>
+						<span class='st_linkedin_large' displayText='LinkedIn'></span>
+						<span class='st_pinterest_large' displayText='Pinterest'></span>
+						<span class='st_email_large' displayText='Email'></span>
+					</div>
+					<br><br>
+
 					<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">Why coding?</span> It&#39;s a popular question among people when they ask what I go to school for. Why software development? The short answer?</p> 
 					<p style="font-family: 'Architects Daughter', cursive; font-size: 25px;">Why not?</p><br>
 
