Added a pinable image to blog

--- a/public/why-coding.html
+++ b/public/why-coding.html
@@ -78,7 +78,7 @@
 					<h2 class="blog-title">Why Coding?
 						<br>
 						<small>June 29.2016</small>
-					</h2><br><br>
+					</h2><br>
 					<div class="img-center">
 						<span class='st_sharethis_large' displayText='ShareThis'></span>
 						<span class='st_facebook_large' displayText='Facebook'></span>
@@ -87,6 +87,10 @@
 						<span class='st_pinterest_large' displayText='Pinterest'></span>
 						<span class='st_email_large' displayText='Email'></span>
 					</div>
+					<br><br>
+
+					<img class="img-responsive img-border img-center" src="img/blogpic.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
+
 					<br><br>
 
 					<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">Why coding?</span> It&#39;s a popular question among people when they ask what I go to school for. Why software development? The short answer?</p> 
