--- a/public/why-coding.html
+++ b/public/why-coding.html
@@ -89,7 +89,7 @@
 					</div>
 					<br><br>
 
-					<img class="img-responsive img-border img-center" src="img/blogpic.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
+					<img class="img-responsive img-border img-center" src="/img/blogpic.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
 
 					<br><br>
 
