added background image collection and changed blog page again to see if pinterest images would work (they didn't)

--- a/public/why-coding.html
+++ b/public/why-coding.html
@@ -89,7 +89,7 @@
 					</div>
 					<br><br>
 
-					<img class="img-responsive img-border img-center" src="/img/blogpic.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
+					<img class="img-responsive img-border img-center" src="/img/blogpic_Fotor.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
 
 					<br><br>
 
@@ -130,11 +130,8 @@
 	<!-- Bootstrap Core JavaScript -->
 	<script src="js/bootstrap/bootstrap.min.js"></script>
 
-	<!-- Script to Activate the Carousel -->
-	<script>
-	$('.carousel').carousel({
-		interval: 5000 //changes the speed
-	})
+	<!-- Script to Activate Pinterest Button -->
+	<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 	</script>
 	</body>
 </html>
