finally fixed decimal point on calculator

--- a/public/calculator/calculator.html
+++ b/public/calculator/calculator.html
@@ -40,7 +40,7 @@
 
 			<span class="digits" data-value="0">0</span>
 
-			<span id="decimal" class="digits" data-value=".">.</span>
+			<span id="decimal" data-value=".">.</span>
 
 			<span id="eval">=</span>
 
