--- a/public/why-coding.html
+++ b/public/why-coding.html
@@ -88,14 +88,14 @@
 						</div>
 						<br><br>
 
-						<img class="img-responsive img-border img-center" src="/img/blogpic_Fotor.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
+						<img class="img-responsive img-border img-center" src="img/blogpic_Fotor.jpg" alt="Why coding? What could possibly be so exciting about that? Short answer? Creating something amazing with a few simple keystrokes.">
 
 						<br><br>
 
 						<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">Why coding?</span> It&#39;s a popular question among people when they ask what I go to school for. Why software development? The short answer?</p> 
 						<p style="font-family: 'Architects Daughter', cursive; font-size: 25px;">Why not?</p><br>
 
-						<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">Let&#39;s start by painting a picture.</span> Nine months ago, my husband went off to training for an entire month. I asked him if there was anything he needed me to do while he was gone and he said &quot;Get a job.&quot; He was only joking, of course. My husband is not a third derivative (weak calculus joke) and I knew he was only joking. That month of training did not allow for overtime so money would be a little tight but it wasn&#39;t a necessity for me to start working again. Even still, I went out and got a job that day.</p><br>
+						<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">Let&#39;s start by painting a picture.</span> Nine months ago, my husband went off to training for an entire month. I asked him if there was anything he needed me to do while he was gone and he said &quot;Get a job.&quot; He was only joking, of course. My husband is not a third derivative &#40;weak calculus joke&#41; and I knew he was only joking. That month of training did not allow for overtime so money would be a little tight but it wasn&#39;t a necessity for me to start working again. Even still, I went out and got a job that day.</p><br>
 
 						<p style="text-align: left;"> <span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">It wasn&#39;t a great job;</span> I handed out samples of frozen yogurt for 3-7 hours a day and fielded questions like &quot;I&#39;m on a diet and need something sugar-free and fat-free with the smallest amount of calories so what are my options?&quot; I stayed there for six months, making just above minimum wage and ended up working a couple different side jobs to bring in more income when my husband and I moved into our own apartment.</p><br>
 
