new blog post and pictures

--- a/public/blog.html
+++ b/public/blog.html
@@ -69,6 +69,16 @@
 						<hr>
 					</div>
 					<div class="col-lg-12 text-center">
+						<h2>Maximizing Time With Technology
+							<br>
+							<small>July 16.2016</small>
+						</h2>
+						<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">How do I use technology without going overboard?</span> That&#39;s a fair question, considering I spend a minimum of eight hours a day on my computer while in school, which is now at the halfway point of completion.</p> 
+						<a href="maximizing-technology.html" class="btn btn-default btn-lg">Read More</a>
+						<hr>
+
+						<br>
+
 						<h2>Why Coding?
 							<br>
 							<small>June 29.2016</small>
@@ -77,6 +87,10 @@
 						<p style="font-family: 'Architects Daughter', cursive; font-size: 25px;">Why not?</p><br>
 						<a href="why-coding.html" class="btn btn-default btn-lg">Read More</a>
 						<hr>
+
+						
+
+					
 					</div>
 				</div>
 			</div>
