--- a/public/index.html
+++ b/public/index.html
@@ -29,43 +29,42 @@
 		<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div class="brand">McSmash Designs</div>
+		<div class="brand">McSmash Designs</div> 
 		<div class="address-bar">600 Navarro St #350 | San Antonio, TX 78205 | (210) 802-7397</div>
-		<!-- Navigation -->
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-					<a class="navbar-brand" href="index.html">McSmash Designs</a>
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+			<a class="navbar-brand" href="index.html">McSmash Designs</a>
+		</div>
+			<nav class="navbar navbar-default" role="navigation"> 
+				<div class="container"> 
+					<!-- Brand and toggle get grouped for better mobile display --> 		
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li>
+								<a href="index.html">Home</a>
+							</li>
+							<li>
+								<a href="about.html">About</a>
+							</li>
+							<li>
+								<a href="blog.html">Blog</a>
+							</li>
+							<li>
+								<a href="contact.html">Contact</a>
+							</li>
+						</ul>
+					</div>
+					<!-- /.navbar-collapse -->
 				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li>
-							<a href="index.html">Home</a>
-						</li>
-						<li>
-							<a href="about.html">About</a>
-						</li>
-						<li>
-							<a href="blog.html">Blog</a>
-						</li>
-						<li>
-							<a href="contact.html">Contact</a>
-						</li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-			</div>
 			<!-- /.container -->
-		</nav>
+			</nav>
 		<div class="container">
 			<div class="row">
 				<div class="box">
