--- a/public/blog.html
+++ b/public/blog.html
@@ -73,7 +73,7 @@
 							<br>
 							<small>July 16.2016</small>
 						</h2>
-						<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">How do I use technology without going overboard?</span> That&#39;s a fair question, considering I spend a minimum of eight hours a day on my computer while in school, which is now at the halfway point of completion.</p> 
+						<p style="text-align: left;"><span style="font-family: 'Architects Daughter', cursive;font-size: 20px;">How do I use technology without going overboard?</span> That&#39;s a fair question, considering I spend a minimum of eight hours a day on my computer while in school, which is now at the halfway point of completion.</p> <br>
 						<a href="maximizing-technology.html" class="btn btn-default btn-lg">Read More</a>
 						<hr>
 
